--- a/RPS.html
+++ b/RPS.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Rock Paper Sicssors</title>
-  <meta charset="UTF-8"/>
-  <script src="domMani.js" defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="RPS.js"></script>
+  <header>
+    <h1>Welcome to Rock Paper Scissors</h1>
+  </header>
+  <main>
+    <section>
+      <h2>Instructions</h2>
+      <p>Choose your move by clicking one of the buttons below. Then, see if you can beat the computer!</p>
+    </section>
+    <section>
+      <h2>Game Area</h2>
+      <div id="game-container"></div>
+      <div id="result">
+        <p>Waiting for your move...</p>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2022 Rock Paper Scissors Game</p>
+  </footer>
+  <script src="domManipulation.js" defer></script>
+  <script src="RPS.js" defer></script>
 </body>
 </html>
